agregue un parrafo a mi proyecto index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>El titulo de mi pagina web</h1>
+
+    <p>
+        Mi nombre es Isaac pochung y mi apellido es Su Tsai
+        estoy estudiando Ingenieria en sistemas en la Utec 
+    </p>
 </body>
 </html>
