agregue un parrafo sobre POO

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         Mi nombre es Isaac pochung y mi apellido es Su Tsai
         estoy estudiando Ingenieria en sistemas en la Utec 
     </p>
+
+    <p>
+        La POO es un paradigma surgido en los años 1970, 
+        que utiliza objetos como elementos 
+        fundamentales en la construcción de la solución.
+    </p>
 </body>
 </html>
